--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <div class="pulse"></div>
                     <span>Speaking...</span>
                 </div>
+
+                <div style="margin-top: 2rem; font-size: 0.8rem; opacity: 0.7;">
+                    Made by <a href="https://github.com/fahimasub" target="_blank" style="color: #fff; text-decoration: none;">Fahima Subhani</a>
+                </div>
             </div>
         </div>
     </div>
